[package]
name = "foocalc"
version = "0.2.0"
edition = "2021"
authors = ["blahblahbloopster"]
description = "A command line RPN calculator with multiple precision and unit support"
readme = "README.md"
repository = "https://github.com/blahblahbloopster/calculator-3"
license = "Apache-2.0"
categories = ["command-line-utilities", "mathematics"]
keywords = ["calculator", "rpn"]
include = ["units.txt", "context.txt", "src/**/*"]

[dependencies]
rug = "1.19"
peg = "0.8.1"
regex = "1.8.1"
rustyline = { version = "10.0.0", features = ["custom-bindings"] }
rustyline-derive = "0.7.0"
rand = "0.8.5"
ansi_term = "0.12.1"
